# chestor_bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  alembic.ini.example  dialogs.json  docker-compose.yml  init.sql  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 80133d7ead4d_cooldowns_migration.py  ce79a54250c9_insert_new_cooldown_type_upgrade_kagune.py
src/: config.py
src/bot/: __main__.py  config.py  containers.py  game_configs.py
src/bot/exceptions/: __init__.py  chat.py  chat_not_found.py  ghoul_not_found.py  media_download.py  media_not_found.py  rp_commands.py  time.py  user_not_found.py
src/bot/filters/: __init__.py  rp_command.py  text.py  wordle.py
src/bot/middlewares/: __init__.py  ban_middleware.py  creator_middleware.py  database_middleware.py  ghoul_middleware.py  logging_middleware.py  moderator_middleware.py  rp_commands_middleware.py  sync_entity_middleware.py
src/bot/repositories/: __init__.py  base.py  chat.py  ghoul.py  lottery.py  media.py  rp_commands.py  user.py  user_coldown.py
src/bot/routers/: __init__.py  bot_router.py  check_balance.py  error_router.py  (+5 more)
src/database/: __init__.py
tests/: conftest.py
tests/integration/: user_and_ghoul_services_integration_test.py  user_repository_test.py  user_service_test.py
tests/unit/: ban_service_unit_test.py  calculate_kagune_test.py  dialog_service_test.py  ghoul_service_unit_test.py  media_service_unit_test.py  player_lookup_service_unit_test.py  reset_service_unit_test.py  start_router_test.py  stats_edit_sevice_unit_test.py  user_service_unit_test.py
(+106 files in other folders)
