[project]
name = "CheStor_Bot_version_2"
version = "0.1.0"
description = "Telegram bot"
authors = [
    { name = "SelfTopic", email = "chestor.official@gmail.com" }
]

license = {text = "MIT"}
packages = [
    { include = "src", from = "." }
]
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-c (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "pq (>=1.9.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
    "pytest-trio (>=0.8.0,<0.9.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=25.5.0,<26.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "ghoul-quiz-lib @ git+https://github.com/SelfTopic/questions_ghoul_api_lib.git",
    "moviepy (>=2.2.1,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]